# Django-accounts-package

./: .gitignore  Pipfile  README.md  _env_sample  manage.py
accounts/: configurations.py  urls.py
accounts/management/commands/: init_users.py
accounts_package/: MANIFEST.in  README.md  README.rst  setup.cfg
accounts_package/accounts/: adapter.py  admin.py  configurations.py  models.py
accounts_package/accounts/management/commands/: init_pkg.py
accounts_package/django_accounts_package.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
accountsproject/: asgi.py  settings.py  urls.py  wsgi.py
accountsproject/apps/accounts/: adapter.py  admin.py  configurations.py  serializers.py  views.py
accountsproject/apps/accounts/management/commands/: init_authprovider.py
accountsproject/apps/accounts/migrations/: 0001_initial.py
