[metadata]
name = django-accounts-package
version = 0.7
description = A Django app to conduct web-based authentication using Microsoft and Google authentaction tokens.
long_description = file: README.rst
url = https://github.com/MuhammadAlgshy/django-accounts-package.git
author = Muhammad Algshy, Mohammad Yusuf
author_email = malgshy@gmail.com, mhdalyusuf@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires = Django >= 4.1